A bunch of issues and gap fixes

--- a/frontend/src/app/components/management/server-dns-form/server-dns-form.less
+++ b/frontend/src/app/components/management/server-dns-form/server-dns-form.less
@@ -9,7 +9,6 @@ server-dns-form {
         max-width: 700px;
 
         > svg-icon {
-            fill: @color7;
             margin-right: .5em;
         }
     }
