--- a/frontend/src/app/components/shared/copy-to-clipboard-button/copy-to-clipboard-button.less
+++ b/frontend/src/app/components/shared/copy-to-clipboard-button/copy-to-clipboard-button.less
@@ -1,8 +1,4 @@
 copy-to-clipboard-button {
-    svg-icon {
-        fill: @color7;
-    }
-
     .btn-flat {
         padding: 0;
     }
